Fixed icon alignment on action buttons for IE

--- a/src/WebComponents/ActionButton/action-button.less
+++ b/src/WebComponents/ActionButton/action-button.less
@@ -27,7 +27,6 @@ vi-action-button {
         &[header] {
             vi-icon {
                 display: inline-block;
-                vertical-align: top;
             }
         }
 
